--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -72,3 +72,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+h1 {
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  flex-shrink: 0;
+  width: 100%;
+  color: white;
+  letter-spacing: 5px;
+  text-shadow: 0px 0px 2px #222222;
+  text-align: center;
+  text-shadow: 2px 1px 0 #222, 3px 3px 0 #222, -2px 1px 0 #222, 1px -1px 0 #222;
+}
