--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -65,8 +65,9 @@ body {
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  /* font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -82,4 +83,27 @@ h1 {
   text-shadow: 0px 0px 2px #222222;
   text-align: center;
   text-shadow: 2px 1px 0 #222, 3px 3px 0 #222, -2px 1px 0 #222, 1px -1px 0 #222;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+a{
+    text-decoration: none;
+}
+
+button{
+  display: block;
+  border: 0;
+  border-radius: 10px;
+  font-size: 1rem;
+  color: white;
+  background-color: #318ce7;
+  cursor: pointer;
+  box-shadow: 0 6px #2975c2;
+}
+button:hover {
+  transform: translateY(4px);
+  box-shadow: 0 2px #2975c2;
 }
