--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -107,3 +107,9 @@ button:hover {
   transform: translateY(4px);
   box-shadow: 0 2px #2975c2;
 }
+
+@media (prefers-color-scheme: dark) {
+  body{
+    color: #2c3e50;
+  }
+}
